tests/kiama/negative/type_errors/L4/11_badrecord5.ob
MODULE badrecord5;

TYPE
    arecord2 = RECORD f : BOOLEAN; x : INTEGER END;

VAR
    rec1 : arecord2;
    rec2 : RECORD h : INTEGER; r : RECORD i : INTEGER; j : BOOLEAN END END;
    
BEGIN
    rec2.h := rec1.h
END badrecord5.
